[tool.poetry]
name = "safe-refuge-bot"
version = "0.1.0"
description = ""
authors = ["Jason Dunn <William.Dunn@Quasarke.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pydantic = "^1.9.1"
python-telegram-bot = {version = "*", allow-prereleases = true}
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
